fix: resolve JDK 11 compilation errors (Thread.resume, Locale.of, String.formatted, virtual threads)
- Rename ClockThread.resume() to resumeCountdown() to avoid conflict with final Thread.resume() in Java 11
- Rename Service.resume() to resumeService() to avoid conflict with final Thread.resume() in Java 11
- Replace Thread.ofPlatform() with traditional Thread construction in UsbHotplugMonitor
- Replace Locale.of() with new Locale() constructor in LanguageDiscovery
- Replace String.formatted() with String.format() in MainFrame
- Replace Executors.newVirtualThreadPerTaskExecutor() with Executors.newCachedThreadPool() in StatsHttpServer
- Add maven.compiler.release=11 to pom.xml for proper Java 11 compliance checking

All 239 tests pass.

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>